Fixed svg alignement

--- a/index.css
+++ b/index.css
@@ -25,10 +25,6 @@
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
-.link-button--icon {
-  display: inline-flex;
-}
-
-.link-button--icon .link-button__text {
-  align-self: center;
+.link-button__group svg {
+  vertical-align: bottom;
 }
